--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body {
-background-color: yellow;
+background-color: rgb(255, 255, 255);
 }
 .parrafo {
       color:darkgreen;
@@ -15,6 +15,7 @@ background-color: yellow;
     height: 80vh;
     border: 1px solid black;
     margin: 15px;
+    position: relative;
 }
 
 #contenedor2 {
@@ -22,12 +23,41 @@ background-color: yellow;
     height: 80vh;
     border: 1px solid black;
     margin: 15px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .cuadrado {
     width: 25%;
     height: 25%;
-    background-color: aquamarine;
-    border: 1px solid black
+    background-color: rgb(124, 238, 200);
+    border: 1px solid black;
+    position: absolute;
+
+}
+
+#cuadro1 {
+    top:0%;
+    left: 0%;
+
+}
+
+#cuadro2 {
+    top:25%;
+    left: 25%;
+    
+}
+
+#cuadro3 {
+    top:50%;
+    left: 50%;
+
+}
+
+.cuadradow {
+    width: 25%;
+    height: 25%;
+    background-color: rgb(124, 238, 200);
+    border: 1px solid black;
 
 }
