--- a/estilo.css
+++ b/estilo.css
@@ -118,6 +118,21 @@ position: relative;
     left: 63%; /* posición desde el borde izquierdo del lienzo */
 }
 
+@keyframes breathe {
+	0% {
+		font-variation-settings: 'wght' 100, 'wdth' 85;
+		font-size: 10vw;
+	}
+	60% {
+		font-variation-settings: 'wght' 700, 'wdth' 100;
+		font-size: 11vw;
+	}
+	
+	100% {
+		font-variation-settings: 'wght' 100, 'wdth' 85;
+		font-size: 10vw;
+	}
+}
 .cuadrado1 {
     width: 100px;
     height: 100px;
@@ -125,6 +140,9 @@ position: relative;
     position: absolute;
     top: 60%;
     left: 70%;
+}
+.cuadro: :hover {
+    animation: redondear 2s linear infinite alternate;
 }
 .cuadrado2 {
     width: 100px;
@@ -210,4 +228,64 @@ position: relative;
     top: 80%;
     left: 40%;
 }
+
+/*Hover:*/
+titulo {
+	font-family: "IBM Plex Sans Roman", sans-serif;
+	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/85648/IBMPlexSansVar-Roman.ttf");
+    font-weight: 300;
+    font-style: normal;
+    font-size: 5em;
+}
+.titulo:hover {
+    font-weight: 700;
+    color: rgb(125, 33, 167)
+}
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	font-family: "IBM Plex Sans Roman", Times;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	min-height: 100vh;
+	background-color: #DCEDC8;
+}
+
+h1 {
+	font-weight: 100;
+	font-size: 10vw;
+	line-height: 10vw;
+	font-variation-settings: 'wght' 100, 'wdth' 85;
+}
+h1 .char {
+	--delay: calc((var(--char-index) + 1) * 400ms);
+	animation: breathe 4000ms infinite both;
+	animation-delay: var(--delay);
+}
+
+h1:hover span {
+	animation-play-state: paused;
+}
+
+@keyframes breathe {
+	0% {
+		font-variation-settings: 'wght' 100, 'wdth' 85;
+		font-size: 10vw;
+	}
+	60% {
+		font-variation-settings: 'wght' 700, 'wdth' 100;
+		font-size: 11vw;
+	}
+	
+	100% {
+		font-variation-settings: 'wght' 100, 'wdth' 85;
+		font-size: 10vw;
+	}
+}
+
 
