--- a/estilo.css
+++ b/estilo.css
@@ -141,7 +141,7 @@ position: relative;
     top: 60%;
     left: 70%;
 }
-.cuadro: :hover {
+.cuadro:hover {
     animation: redondear 2s linear infinite alternate;
 }
 .cuadrado2 {
@@ -230,7 +230,7 @@ position: relative;
 }
 
 /*Hover:*/
-titulo {
+.titulo {
 	font-family: "IBM Plex Sans Roman", sans-serif;
 	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/85648/IBMPlexSansVar-Roman.ttf");
     font-weight: 300;
@@ -246,7 +246,8 @@ titulo {
 	box-sizing: border-box;
 }
 
-body {
+
+/*body {
 	font-family: "IBM Plex Sans Roman", Times;
 	display: flex;
 	align-items: center;
@@ -286,6 +287,6 @@ h1:hover span {
 		font-variation-settings: 'wght' 100, 'wdth' 85;
 		font-size: 10vw;
 	}
-}
+}*/
 
 
